--- a/app/src/main/res/layout/activity_form_input.xml
+++ b/app/src/main/res/layout/activity_form_input.xml
@@ -7,40 +7,30 @@
     android:orientation="vertical"
     android:background="@drawable/screenlogin"
     tools:context="com.motionlaboratory.rekruitasiapk.FormInput">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.2"
-        >
-
+        android:layout_weight="1.2">
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
-        android:orientation="vertical"
-        >
-
+        android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Masukkan NIM anda : "
-            android:textColor="@color/white"
-            />
-
+            android:textColor="@color/white" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:paddingLeft="20dp"
-            >
-
+            android:paddingLeft="20dp">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,11 +38,8 @@
                 android:background="@null"
                 android:textColor="@color/red_button"
                 android:id="@+id/et_input"
-                android:inputType="number"
-                />
-
+                android:inputType="number" />
         </LinearLayout>
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,9 +50,6 @@
             android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/rounded_button"
-            android:text="Semoga Yang Terbaik"
-            />
-
+            android:text="Semoga Yang Terbaik" />
     </LinearLayout>
-
 </LinearLayout>
